Fixing candidate committee callout on mobile

--- a/scss/components/_callouts.scss
+++ b/scss/components/_callouts.scss
@@ -23,22 +23,9 @@
   @include u-bg--neutral();
 }
 
-.callout__content {
-  @include span-columns(3 of 6);
-}
-
-.callout__action {
-  @include span-columns(3 of 6);
-}
-
-.callout__icon {
-  @include span-columns(1 of 3);
-  padding: 1rem;
-}
-
 .callout__title {
   font-weight: bold;
-  margin-bottom: .5rem;
+  margin: 0 0 .5rem 0;
 }
 
 .callout__subtitle {
@@ -46,7 +33,30 @@
   font-size: 1.2rem;
 }
 
+.callout__action {
+  padding-top: 1rem;
+}
+
+.callout__icon {
+  @include span-columns(1 of 3);
+  padding: 1rem;
+  border-bottom: none;
+}
+
 .callout__sublinks {
-  @include span-columns(2 of 3);
-  font-family: $sans-serif;
+@include span-columns(2 of 3);
+font-family: $sans-serif;
+}
+
+// BREAKPOINT: MEDIUM
+@include media($med){
+  .callout__content {
+    @include span-columns(3 of 6);
+  }
+
+  .callout__action {
+    @include span-columns(3 of 6);
+    padding-top: 0;
+  }
+
 }
